# anot

./: Cargo.toml  Justfile  README.md  pyproject.toml
.github/workflows/: branch-push.yml
benches/: benchmark.rs
python/anot/: _anot.pyi
src/: cli.rs  hunks.rs  input.rs  lib.rs  parser.rs  python.rs
